--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Test CI/CD
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -36,7 +36,8 @@ jobs:
     - name: Test Env Variable
       env:
         key_1: ${{ secrets.KEY_1 }}
-        commit_msg: "Site updated: ${date +'%Y-%m-%d %H:%M:%S'} %n${{ github.event.head_commit.message }}"
+        commit_msg: "Site updated: ${date +'%Y-%m-%d %H:%M:%S'}/n${{ github.event.head_commit.message }}"
       run: |
-        echo "key_1: ${key_1}"
-        echo "commit_msg: ${commit_msg}"
+        echo "Env key_1: ${key_1}"
+        echo "Env commit_msg: ${commit_msg}"
+        echo "Site updated: ${date +'%Y-%m-%d %H:%M:%S'}%n${{ github.event.head_commit.message }}"
