--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,7 @@ jobs:
       env:
         key_1: ${{ secrets.KEY_1 }}
         key_2: "Hi~"
-        commit_msg: ${{ cat commit_msg.log }}
+        commit_msg: ${cat commit_msg.log}
       run: |
         echo "Env key_1: ${key_1}"
         echo "Env key_2: ${key_2}"
