--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,4 +48,4 @@ jobs:
         echo "Env key_1: ${key_1}"
         echo "Env key_2: ${key_2}"
         echo "Secrets key_1: ${{ secrets.KEY_1 }}"
-        echo "Env commit_msg: ${{ commit_msg }}"
+        echo "Env commit_msg: ${commit_msg}"
