--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
         echo Add other actions to build,
         echo test, and deploy your project.
         
-    # Runs a set of commands using the runners shell
+    # from: https://github.com/actions/starter-workflows/issues/68#issuecomment-592997170
     - name: Generate Env Variable
       run: |     
        git log --pretty=format:"GitHub Actions Auto Builder at $(date -u +'%Y-%m-d %H:%M:%S') %n%nLatest Commit %H%n%n    %s%n%n    %b" --date=short -n 1 > commit_msg.log
@@ -49,6 +49,22 @@ jobs:
        export SITE_UPDATED_LOG_TEMP="(GithubActions) Site updated: $(date -u +'%Y-%m-%d %H:%M:%S UTC')"
        echo "::set-env name=SITE_UPDATED_LOG::$SITE_UPDATED_LOG_TEMP"
        echo "SITE_UPDATED_LOG: ${{ env.SITE_UPDATED_LOG }}"
+       
+       echo "实践证明，刚刚手动设置生成的环境变量在当前不可用，需要到next-step才能用"
+       
+    - name: How To Use Env Variable 
+      run: |
+        echo "Two way to use the Env Variable"
+        echo ""
+        echo "-------- Way 1: ${{ env.APP_NAME }} --------"
+        echo "Env COMMIT_MSG: ${{ env.COMMIT_MSG }}"
+        echo "Env APP_NAME: ${{ env.APP_NAME }}"
+        echo "Env SITE_UPDATED_LOG: ${SITE_UPDATED_LOG}"
+        
+        echo "-------- Way 2: ${APP_NAME} --------"
+        echo "Env COMMIT_MSG: ${COMMIT_MSG}"
+        echo "Env APP_NAME: ${env.APP_NAME}"
+        echo "Env SITE_UPDATED_LOG: ${SITE_UPDATED_LOG}"
       
     - name: Test Env Variable as input parameter 1
       uses: wxdlong/hello-action@v7
@@ -59,8 +75,8 @@ jobs:
       uses: wxdlong/hello-action@v7
       with:
         who-to-greet: ${{ env.APP_NAME }} ${{ env.SITE_UPDATED_LOG }} 
-   
-    - name: Test Env Variable
+
+    - name: Test Step Env Variable
       env:
         key_1: ${{ secrets.KEY_1 }}
         key_2: "Hi~"
@@ -71,8 +87,6 @@ jobs:
 
         echo "Env key_2: ${key_2}"
         
-        echo "Env COMMIT_MSG: ${{ env.COMMIT_MSG }}"
         echo "Env APP_NAME: ${{ env.APP_NAME }}"
         echo "Env app_name: ${app_name}"
-        echo "Env SITE_UPDATED_LOG: ${SITE_UPDATED_LOG}"
 
