--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ name: Test CI/CD
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [ source ]
   pull_request:
     branches: [ master ]
 
